Futher CSS cleanup, update index.md

--- a/cs/tikzpy/index.html
+++ b/cs/tikzpy/index.html
@@ -30,7 +30,7 @@
 <h1><a href="/cs/tikzpy/">Tikz-Python</a></h1>
 <p>An object-oriented Python approach towards providing a giant wrapper for Tikz code, with the goal of streamlining the process of creating complex figures for TeX documents.</p>
 <h2>Requirements</h2>
-<p>This requires Python 3.7+ Additionally, you need an up-to-date version of a LaTeX that has both the <code>tikz</code> library and <code>latexmk</code>. </p>
+<p>This requires Python 3.7+. Additionally, you need an up-to-date version of a LaTeX that has both the <code>tikz</code> library and <code>latexmk</code>. </p>
 <p>If you already have LaTeX or a related TeX engine, you most definitely have <code>tikz</code>. You also probably have <code>latexmk</code>. If you're not sure, run <code>latexmk --version</code> from the command line and observe the output.</p>
 <p>To run the tests, you need the python packages <code>numpy</code>, <a href="https://github.com/pytest-dev/pytest"><code>pytest</code></a> and <a href="https://github.com/pytest-dev/pytest-orderhttps://github.com/pytest-dev/pytest-order"><code>pytest-order</code></a>. These will be installed for you if they are missing.</p>
 <h2>Installation</h2>
