--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
     </ul>
     </div>
 <div class="main-content">
-<p>Hi! My name is Luke and you've found my website.</p>
-<p>Here is some stuff you can look at. </p>
+<p>Hi! My name is Luke Trujillo and you've found my website. </p>
+<p>I like math, Linux things, and programming (Python, C++). Here is some stuff you can look at. </p>
 <ul>
 <li>
 <p><a href="/cs/tikzpy/">A Python package</a> for generating TikZ code (a LaTeX thing), which I did because TikZ is powerful but very tedious to use.</p>
 </li>
 <li>
-<p><a href="https://ltrujello.github.io/cat_book/cat_theory.pdf">An Introductory text on Category Theory</a>. This is a 400 page document that I spent hundreds of hours on during my undergrad since it tied together a lot of things I was learning at the time. </p>
+<p><a href="/static/cat_theory.pdf">An Introductory text on Category Theory</a>. This is a 400 page document that I spent hundreds of hours on during my undergrad since it tied together a lot of things I was learning at the time. </p>
 </li>
 <li>
-<p><a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>, my undergrad thesis. The title is somewhat a play on words, as the thesis work was on clarifying a known result in category theory because the original proof left many details to the reader, and I could not find anywhere in academic literature or on the internet of anyone supplying these details themselves. You can read more about that and play with this web app I made as part of my thesis <a href="/math/associahedron/">here</a>.</p>
+<p><a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>, my undergrad thesis. You can read more about that and play with this web app I made as part of my thesis <a href="/math/associahedron/">here</a>.</p>
 </li>
 <li>
-<p>You can access my CV <a href="/cv/cv.pdf">here</a>.</p>
+<p><a href="/static/algebra.pdf">Some algebra notes</a> on Group, Ring, and Module theory from my earlier undergrad time.</p>
+</li>
+<li>
+<p>You can access my CV <a href="/static/cv.pdf">here</a>.</p>
 </li>
 </ul>
 <hr>
@@ -62,6 +65,18 @@
         </p>
     </div>
     <img class="preview-img" src="/math/associahedron/imgs/assoc_1.png"/> 
+    </div>
+    <hr>
+</article><article>
+    <div class="preview-box">
+    <div>
+        <h2><a href="/math/coefficient_cracking/">Coefficient Cracking</a></h2>
+        <p class="meta">1970-01-01</p>
+        <p class="summary">
+            After learning about the applied math techniques beyond rational interpolation, I realized that one could use Cosmin-Ionita's work to actually find the integer coefficients of&nbsp;<a class="more" href="/math/coefficient_cracking/">...</a>
+        </p>
+    </div>
+     
     </div>
     <hr>
 </article><article>
