--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p><a href="/static/cat_theory.pdf">An Introductory text on Category Theory</a>. This is a 400 page document that I spent hundreds of hours on during my undergrad since it tied together a lot of things I was learning at the time. </p>
 </li>
 <li>
-<p><a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>, my undergrad thesis. You can read more about that and play with this web app I made as part of my thesis <a href="/math/associahedron/">here</a>.</p>
+<p><a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>. This is my undergrad thesis. You can use <a href="/static/thesis_presentation.pdf">these slides</a> for an overview of that, and you can find a web app I made as part of my thesis <a href="/math/associahedron/">here</a>.</p>
 </li>
 <li>
 <p><a href="/static/algebra.pdf">Some algebra notes</a> on Group, Ring, and Module theory from my earlier undergrad time.</p>
