--- a/math/associahedron/index.html
+++ b/math/associahedron/index.html
@@ -29,7 +29,7 @@
 <div class="main-content">
 <article>
 <h1><a href="/math/associahedron/">Associahedra</a></h1>
-<p>The <a href="https://en.wikipedia.org/wiki/Associahedron">Associahedra</a> are a very mathematically deep family of polytopes (one in each dimension) that occur frequently in combinatorics, under many different interpretations. A fascinating fact about them is that the coefficients of the multiplicate inverse of a power series encode the polyhedra face data of the Associahedra (see Marcelo Aguiar and Frederico Ardilla's <a href="https://arxiv.org/abs/1709.07504">paper</a>.</p>
+<p>The <a href="https://en.wikipedia.org/wiki/Associahedron">Associahedra</a> are a very mathematically deep family of polytopes (one in each dimension) that occur frequently in combinatorics, under many different interpretations. A fascinating fact about them is that the coefficients of the multiplicate inverse of a power series encode the polyhedra face data of the Associahedra (see Marcelo Aguiar and Frederico Ardilla's <a href="https://arxiv.org/abs/1709.07504">paper</a>).</p>
 <p>Here's an interactive 3D web app of the first 7. They're all projected to R^3, and K_5 is the family member that naturally lives in R^3. I made this with the help of this <a href="https://github.com/vasturiano/3d-force-graph">3D-Force-Graph</a> library.</p>
 <p>        <div class = "wrapper">
             <div id="gui"></div>
@@ -65,9 +65,6 @@
 <ul>
 <li>
 <p>My thesis <a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>. It is for anyone who ever needs to really understand each exact details of Mac Lane's proof, or anyone who is just curious about the details. Here's a nice picture of K_5 that I produced in my thesis.</p>
-</li>
-<li>
-<p><a href="">Presentation slides I made that I used for an end-of-year presentation explaining my thesis work.</a></p>
 </li>
 <li>
 <p><a href="">The raw polyhedra face data of the associahedra in JSON format</a>, as well as <a href="">the python code that generated the data here</a>. It was a quite a pain to generate and verify to be correct, so I hope if someone needs this data they can find it here before going through the trouble of generating it again.</p>
