--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 <div class="main-content">
 <p>Hi! My name is Luke Trujillo and you've found my website. </p>
-<p>I like math, Linux things, and programming (Python, C++). Here is some stuff you can look at. </p>
+<p>I like math, Linux things, and programming (Python, C, C++). Here is some stuff you can look at. </p>
 <ul>
 <li>
 <p><a href="/cs/tikzpy/">A Python package</a> for generating TikZ code (a LaTeX thing), which I did because TikZ is powerful but very tedious to use.</p>
