--- a/math/associahedron/index.html
+++ b/math/associahedron/index.html
@@ -63,12 +63,11 @@
 <p>Interestingly, in Mac Lane's proof, he does not mention at all the connection that his proof had with the associahedra. He most definitely knew there was a connection (I would bet that he had spoken with or knew of Jim Stasheff, who wrote about the associahedra, since they worked in related areas), but I do wonder why he didn't mention it.</p>
 <p>Here are some further things you can look at.</p>
 <ul>
-<li>
-<p>My thesis <a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>. It is for anyone who ever needs to really understand each exact details of Mac Lane's proof, or anyone who is just curious about the details. Here's a nice picture of K_5 that I produced in my thesis.</p>
-</li>
-<li>
-<p><a href="">The raw polyhedra face data of the associahedra in JSON format</a>, as well as <a href="">the python code that generated the data here</a>. It was a quite a pain to generate and verify to be correct, so I hope if someone needs this data they can find it here before going through the trouble of generating it again.</p>
-</li>
+<li>My thesis <a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>. It is for anyone who ever needs to really understand each exact detail of Mac Lane's proof, or anyone who is just curious about the details. Here's a nice picture of K_5 that I produced in my thesis.</li>
+</ul>
+<p><img src="/math/associahedron/imgs/k5-1.png" style="margin: 0 auto; display: block; width: 80%;"/> </p>
+<ul>
+<li><a href="https://github.com/ltrujello/Monoidal_Coherence_and_Binary_Words/tree/master/associahedra_in_3D/json">The raw polyhedra face data of the associahedra in JSON format</a>, as well as <a href="https://github.com/ltrujello/Monoidal_Coherence_and_Binary_Words/blob/master/binary_word_Class/associahedron.py">the python code that generated the data here</a>. It was a quite a pain to generate and verify to be correct, so I hope if someone needs this data they can find it here before going through the trouble of generating it again.</li>
 </ul>
 </article>
 
