Blog about fzf tab completition failure and its solution

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
 <article>
     <div class="preview-box">
     <div>
+        <h2><a href="/cs/zsh_vimode_fzf_conflict/">fzf tab completion failure due to Zsh-Vi-Mode</a></h2>
+        <p class="meta">2021-10-29</p>
+        <p class="summary">
+            In upgrading my terminal setup, an emotional and cathartic ritual I occassionally perform, I found that fzf, a fuzzy finder for the command line, was&nbsp;<a class="more" href="/cs/zsh_vimode_fzf_conflict/">...</a>
+        </p>
+    </div>
+     
+    </div>
+    <div class="line"></div>
+</article><article>
+    <div class="preview-box">
+    <div>
         <h2><a href="/cs/des/">DES Encryption Algorithm in Python</a></h2>
         <p class="meta">2021-09-29</p>
         <p class="summary">
