Add preview image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             In upgrading my terminal setup, an emotional and cathartic ritual I occassionally perform, I found that fzf, a fuzzy finder for the command line, was&nbsp;<a class="more" href="/cs/zsh_vimode_fzf_conflict/">...</a>
         </p>
     </div>
-     
+    <img class="preview-img" src="/cs/zsh_vimode_fzf_conflict/imgs/correct_result.png"/> 
     </div>
     <div class="line"></div>
 </article><article>
