--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
 <article>
     <div class="preview-box">
     <div>
+        <h2><a href="/cs/gnu_readline/">GNU Readline and History Library</a></h2>
+        <p class="meta">2021-11-02</p>
+        <p class="summary">
+            In this post, we'll show how to use the GNU Readline and History C libraries to design a REPL (read-evaluate-print-loop) program and to understand how&nbsp;<a class="more" href="/cs/gnu_readline/">...</a>
+        </p>
+    </div>
+    <img class="preview-img" src="/cs/gnu_readline/dependency.png"/> 
+    </div>
+    <div class="line"></div>
+</article><article>
+    <div class="preview-box">
+    <div>
         <h2><a href="/cs/zsh_vimode_fzf_conflict/">fzf tab completion failure due to Zsh-Vi-Mode</a></h2>
         <p class="meta">2021-10-29</p>
         <p class="summary">
