Change site theme to dark, add arch linux install guide

--- a/cs/gnu_readline/index.html
+++ b/cs/gnu_readline/index.html
@@ -16,7 +16,6 @@
 <body class="main">
     <img class="img_header" src="/imgs/IMG_1975.jpg" alt="Some mountain">
     <div>
-    <h2 class="left-banner"> <a style="color:black" href="/"> Hello, world! </a> </h2>
     <ul class="nav-bar">
         <li><a href="/"> Home </a></li>
         <li><a href="/cs/tikzpy/"> TikzPy </a></li>
@@ -43,7 +42,7 @@
 <p>The GNU Readline library does not provide all of our desired features listed above out of the box, but it does provide the tools to implement these features. I found the <a href="https://tiswww.case.edu/php/chet/readline/rltop.html#Documentation">documentation</a> to be a bit terse, or at least I had many "in situation X what does Y do when Z happens" type of questions that the documentation did not answer that. I answered such questions myself by experimenting, looking at the headers, and thinking of the ways in which the program could crash. Since I imagine others would want to implement these features in their own programs, hopefully what I've learned can save others time. </p>
 <h1>A note about MacOS</h1>
 <p>If you plan on using the Readline library and you're developing on MacOS, make sure you're actually using GNU Readline and not some other imposter header files. </p>
-<p>In my experience my version of Readline was missing the <code>append_history</code> function, which is extremely important. It also would not record history unless I had something specific at the top of my history file. I eventually found I wasn't using GNU Readline. I'm not why this happened or who decided to create a fake readline library in MacOS's include files. Since this not how GNU Readline behaves, if you're having trouble getting Readline to work on a Mac this might be why. Read about the compilation below to see how to get it to work.</p>
+<p>In my experience my version of Readline was missing the <code>append_history</code> function, which is extremely important. It also would not record history unless I had something specific at the top of my history file. I eventually found I wasn't using GNU Readline. I'm not sure why this happened or who decided to create a fake readline library in MacOS's include files. Since this not how GNU Readline behaves, if you're having trouble getting Readline to work on a Mac this might be why. Read about the compilation below to see how to get it to work.</p>
 <h1>Basic example</h1>
 <p>We'll first show how to use Readline to create a very simple REPL shell. This will allow you to see how Readline can very nicely deliver the text-editor like experience at a command prompt.</p>
 <pre><code class="language-C">/* first_ex.c */
@@ -84,12 +83,25 @@ int main(){
 <pre><code class="language-bash">gcc -o first_ex firest_ex.c -Lpath/to/some/dir/ -lreadline 
 </code></pre>
 <p>will compile the program. </p>
+<h1>Manually Installing</h1>
+<p>If you're forced to manually install, which might happen if you have MacOs, run these commands (note that you should replace the ftp url with the latest .tar.gz of GNU readline, which you can find <a href="https://tiswww.case.edu/php/chet/readline/rltop.html">here</a>).</p>
+<pre><code class="language-bash">curl -L -o readline-8.1.tar.gz ftp://ftp.gnu.org/gnu/readline/readline-8.1.tar.gz 
+tar -xvzf readline-8.1.tar.gz 
+cd readline-8.1
+./configure
+make
+make install
+</code></pre>
+<p>The output of <code>make install</code> will tell you where it installed the library on your machine. I did this on a MacOS and that was <code>/usr/local/include/readline</code> for me. You can now supply this directory to the <code>-L</code> command argument in the compilation command.</p>
 <h1>Creating and using a history file</h1>
 <p>Our first program isn't very good, because if we close the program we lose our command history. To remedy this, we need to create a history file that tracks our commands.</p>
-<p>GNU Readline provides some functions to assist with this, the two most useful being the following.</p>
+<p>GNU Readline provides some functions to assist with this, the three most useful being the following.</p>
 <ul>
 <li>
 <p><code>int read_history(const char *filename)</code> will receive a <em>full path</em> to the history file and add the contents of the history file to the program's history list.</p>
+</li>
+<li>
+<p><code>int add_history(const char *input)</code> will <strong>copy the pointer</strong> <code>input</code> and add it to the history list. This is what allows you to get your history via up and down arrow keys.</p>
 </li>
 <li>
 <p><code>int append_history(int nelements, const char *filename)</code> will append the most <code>nelements</code>-recent commands to the hisory file with full path <code>filename</code>.</p>
@@ -120,7 +132,7 @@ int main(){
 
         /* Add input to the history, but only if it is not blank content */
         if (*input)
-            append_history(1, &quot;/home/michael_scott/.myhistory&quot;);
+            append_history(1, &quot;/home/michael_scott/.my_history&quot;);
 
         /* Print the input with an exclamation point. */
         printf(&quot;%s!\n&quot;, input);
@@ -277,7 +289,7 @@ int main(){
         last_command = malloc(strlen(input) + 1);
         if (last_command == NULL)
             printf(&quot;Couldn't allocate memory to update the last command.&quot;);
-        last_command = strcpy(last_command, input); /* Necessary because input is freed at end of loop */
+        strcpy(last_command, input); /* Necessary because input is freed at end of loop */
     }
 ...
 </code></pre>
@@ -375,7 +387,7 @@ void update_history_file(const char *history_filename, char *last_command, char 
         last_command = malloc(strlen(input) + 1);
         if (last_command == NULL)
             printf(&quot;Couldn't allocate memory to update the last command.&quot;);
-        last_command = strcpy(last_command, input); /* Necessary because input is freed at end of loop */
+        strcpy(last_command, input); /* Necessary because input is freed at end of loop */
     }
 
     /* Check if we need to flush the history file */
