--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body class="main">
     <img class="img_header" src="/imgs/IMG_1975.jpg" alt="Some mountain">
     <div>
-    <h2 class="left-banner"> <a style="color:black" href="/"> Hello, world! </a> </h2>
     <ul class="nav-bar">
         <li><a href="/"> Home </a></li>
         <li><a href="/cs/tikzpy/"> TikzPy </a></li>
@@ -24,16 +23,16 @@
     </div>
 <div class="main-content">
 <p>Hi! My name is Luke Trujillo and you've found my website. </p>
-<p>I like math, Linux things, and programming (Python, C, C++). Here is some stuff you can look at. </p>
+<p>I like math, Linux things, and programming (Python, C, some C++). Here is some stuff you can look at. </p>
 <ul>
 <li>
-<p><a href="/cs/tikzpy/">A Python package</a> for generating TikZ code (a LaTeX thing), which I did because TikZ is powerful but very tedious to use.</p>
+<p><a href="/cs/tikzpy/">TikzPy</a>, a Python package I wrote for generating TikZ code (a LaTeX thing) programmatically, which I did because TikZ is powerful graphics library but it's extremely tedious to use.</p>
 </li>
 <li>
-<p><a href="/static/cat_theory.pdf">An Introductory text on Category Theory</a>. This is a 400 page document that I spent hundreds of hours on during my undergrad since it tied together a lot of things I was learning at the time. </p>
+<p><a href="/static/cat_theory.pdf">An Introductory text on Category Theory</a>. This is a 400 page math textbook I wrote during my undergrad since it tied together a lot of math things I was learning at the time (algebra, topology, geometry). </p>
 </li>
 <li>
-<p><a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>. This is my undergrad thesis. You can use <a href="/static/thesis_presentation.pdf">these slides</a> for an overview of that, and you can find a web app I made as part of my thesis <a href="/math/associahedron/">here</a>.</p>
+<p><a href="https://scholarship.claremont.edu/hmc_theses/243/">A Coherent Proof of Mac Lane's Coherence Theorem</a>. This is my undergrad thesis that fills in the lengthy details of Saunder Mac Lane's slick proof of the Coherence Theorem, which were basically nonexistent in literal writing before. You can use <a href="/static/thesis_presentation.pdf">these slides</a> for an overview of that, and you can find a web app I made in finding a connection to geometry in the proof <a href="/math/associahedron/">here</a>.</p>
 </li>
 <li>
 <p><a href="/static/algebra.pdf">Some algebra notes</a> on Group, Ring, and Module theory from my earlier undergrad time.</p>
@@ -44,6 +43,18 @@
 </ul>
 <div class="line"></div>
 <article>
+    <div class="preview-box">
+    <div>
+        <h2><a href="/cs/arch_install/">Arch Linux Install Guide and Dell XPS 9710 Experience</a></h2>
+        <p class="meta">2021-12-20</p>
+        <p class="summary">
+            This is an Arch install guide where the machine in question is a new Dell XPS 17 9710, although the guide should apply to other&nbsp;<a class="more" href="/cs/arch_install/">...</a>
+        </p>
+    </div>
+     
+    </div>
+    <div class="line"></div>
+</article><article>
     <div class="preview-box">
     <div>
         <h2><a href="/cs/gnu_readline/">GNU Readline and History Library</a></h2>
